--- a/HOTEL.AP/HOTEL.AP/Properties/launchSettings.json
+++ b/HOTEL.AP/HOTEL.AP/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:13945",
-      "sslPort": 44369
+      "applicationUrl": "http://localhost:13945"
     }
   },
   "profiles": {
@@ -21,7 +20,6 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
