--- a/HOTEL.AP/HOTEL.AP/appsettings.json
+++ b/HOTEL.AP/HOTEL.AP/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "HotelConnectionString": "Server=tcp:hoteles.database.windows.net,1433;Initial Catalog=Hotels;Persist Security Info=False;User ID=hotelsa;Password=Colombia2022+;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "HotelConnectionString": "Server=tcp:hoteles.database.windows.net,1433;Initial Catalog=Hotels;Persist Security Info=False;User ID=***;Password=****;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
